Create Contact page with Formik

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="https://kit.fontawesome.com/e442fdfd4a.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;1,600&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <title>Photography-website</title>
 </head>
 
